src/common/components/cards/result-section-title.scss
// Copyright (c) Microsoft Corporation. All rights reserved.
// Licensed under the MIT License.
@import '../../../common/styles/fonts.scss';
@import '../../../common/styles/colors.scss';

.result-section-title {
    display: flex;
    flex-wrap: nowrap;
    justify-content: flex-start;
    align-items: center;
    margin-top: 8px;
    margin-bottom: 8px;

    :global(.outcome-chip) {
        :global(.count) {
            line-height: 11px;
        }

        &:global(.outcome-chip-fail) {
            :global(.count) {
                line-height: 13px;
            }

            svg {
                margin-bottom: 3px;
            }
        }
    }

    .title {
        @include text-style-title-s;
        margin-right: 6px;
        color: $primary-text;
    }

    .outcome-chip-container {
        display: flex;
        margin-top: 2px;
    }
}

